<resources>
    <string name="app_name">CityGame</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up_redirect">Not yet registered? Sign up</string>
    <string name="login_user_redirect">Already an user ? Login</string>
    <string name="header_title">Poznań City Game</string>

    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="authenticate">Authenticate</string>
    <string name="your_profile">Your Profile</string>
    <string name="visited_places">Visited Places</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname</string>
    <string name="Achievements" />
    <string name="achievements">Achievements</string>
    <string name="weather">Weather</string>

    <string name="profile_email">Email: %s</string>
    <string name="profile_name">Name:  %s</string>
    <string name="profile_surname">Surname: %s</string>

    <string name="profile_title">Title: %s</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels like</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature</string>

</resources>