<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="@string/map"
            android:icon="@drawable/baseline_map_24"/>
        <item
            android:id="@+id/nav_visited_places"
            android:title="@string/visited_places"
            android:icon="@drawable/baseline_home_24"/>
        <item
            android:id="@+id/nav_your_profile"
            android:icon="@drawable/baseline_man_24"
            android:title="@string/your_profile"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/authenticate">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/baseline_logout_24"
                        android:title="@string/logout"/>
                </group>
            </menu>
        </item>
    </group>
</menu>